Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Những sai lầm tài chính Gen Z thường mắc",
+    "content": "Bài viết nêu rõ những sai lầm tài chính phổ biến của thế hệ Gen Z, bao gồm việc sống dựa vào tiền lương, chi tiêu cho các nhu cầu không cần thiết để thể hiện bản thân trên mạng xã hội, và thói quen mua sắm không kiểm soát. Nghiên cứu cho thấy nhiều người trẻ tránh đầu tư do sợ rủi ro, trong khi không tiết kiệm cho hưu trí sớm có thể dẫn đến khó khăn tài chính trong tương lai. Các chuyên gia khuyên Gen Z nên tập trung vào việc đầu tư và tiết kiệm một cách chiến lược để đảm bảo tài chính vững chắc.",
+    "link": "https://vnexpress.net/nhung-sai-lam-tai-chinh-gen-z-thuong-mac-4864149.html",
+    "cat": "kinh-doanh",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Gen Z thường mắc phải những sai lầm tài chính nào?",
+    "answers": [
+      {
+        "text": "Chi tiêu quá mức và không tiết kiệm cho hưu trí",
+        "correct": true
+      },
+      {
+        "text": "Chỉ sử dụng tiền mặt cho mọi giao dịch",
+        "correct": false
+      },
+      {
+        "text": "Đầu tư vào bất động sản ngay lập tức",
+        "correct": false
+      },
+      {
+        "text": "Tránh xa mạng xã hội hoàn toàn",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Giáo sư khuyên sinh viên: Nhảy việc vì lương cao sẽ khó làm được việc lớn",
     "content": "Giáo sư Chử Đức Trình khuyên sinh viên nên cân nhắc kỹ lưỡng trước khi \"nhảy việc\" vì lương cao, đặc biệt trong bối cảnh hiện nay khi công nghệ phát triển nhanh chóng. Ông cho rằng lao động thường trải qua 4-6 lần chuyển việc trong suốt sự nghiệp, nhưng nếu chuyển việc chỉ vì mục tiêu ngắn hạn thì sẽ khó đạt được thành công lớn trong công việc. Ông nhấn mạnh rằng các doanh nghiệp hiện nay lo ngại về tình trạng nhân viên thường xuyên thay đổi công việc, ảnh hưởng tới chi phí đào tạo và sự phát triển bền vững của tổ chức.",
     "link": "https://dantri.com.vn/giao-duc/giao-su-khuyen-sinh-vien-nhay-viec-vi-luong-cao-se-kho-lam-duoc-viec-lon-20250322122012122.htm",
@@ -1746,33 +1773,6 @@
     ]
   },
   {
-    "title": "Viêm xoang có di truyền không?",
-    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
-    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Viêm xoang có di truyền không?",
-    "answers": [
-      {
-        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
-        "correct": true
-      },
-      {
-        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
-        "correct": false
-      },
-      {
-        "text": "Có thể di truyền trong một số trường hợp hiếm.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu liệt dây thần kinh số 7",
     "content": "Liệt dây thần kinh số 7, hay còn gọi là liệt mặt, có thể biểu hiện qua các triệu chứng như tê nhẹ hoặc cứng một bên mặt, khó khăn khi cười, và miệng kéo lệch khi nói hoặc ăn. Dây thần kinh số 7 điều khiển các cử động cơ mặt và liên quan đến cảm giác vị giác, tiết nước bọt và nước mắt. Nếu phát hiện sớm, điều trị trong vòng 72 giờ có thể giúp phục hồi chức năng hoàn toàn và giảm nguy cơ biến chứng. Các nguyên nhân gây liệt bao gồm nhiễm lạnh, nhiễm virus, và các bệnh lý viêm nhiễm.",
     "link": "https://vnexpress.net/dau-hieu-liet-day-than-kinh-so-7-4864394.html",
@@ -1799,6 +1799,33 @@
       },
       {
         "text": "Đau bụng dưới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Viêm xoang có di truyền không?",
+    "content": "Viêm xoang không phải là bệnh di truyền, nhưng một số yếu tố di truyền có thể làm tăng nguy cơ mắc bệnh. Các biến thể trong gene như TAS2R38 và ALOX15 có thể ảnh hưởng đến khả năng bảo vệ của xoang mũi và dẫn đến viêm xoang. Mặc dù không di truyền, nhưng môi trường sống và thói quen sinh hoạt của gia đình cũng có thể tạo điều kiện cho bệnh phát triển. Bệnh viêm xoang có thể được điều trị bằng nhiều phương pháp khác nhau, bao gồm thuốc và can thiệp y tế nếu cần.",
+    "link": "https://vnexpress.net/viem-xoang-co-di-truyen-khong-4864247.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Viêm xoang có di truyền không?",
+    "answers": [
+      {
+        "text": "Không, viêm xoang không di truyền nhưng có thể có yếu tố di truyền liên quan.",
+        "correct": true
+      },
+      {
+        "text": "Có, viêm xoang là bệnh di truyền từ cha mẹ sang con.",
+        "correct": false
+      },
+      {
+        "text": "Có thể di truyền trong một số trường hợp hiếm.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người sống trong cùng một môi trường.",
         "correct": false
       }
     ]
@@ -2291,6 +2318,33 @@
     ]
   },
   {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đo mật độ xương bằng AI trong 30s",
     "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
     "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
@@ -2402,33 +2456,6 @@
       },
       {
         "text": "Chỉ dành cho những người lớn tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
