--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Km0 Hà Nội dự kiến sẽ đặt cạnh hồ Gươm có ý nghĩa gì?",
+    "content": "Hà Nội dự kiến sẽ lắp đặt cột mốc Km0 tại khu vực tượng đài Lý Thái Tổ, cạnh hồ Gươm, trong khuôn khổ cải tạo vườn hoa Lý Thái Tổ. Cột mốc này không chỉ đánh dấu điểm khởi đầu cho các tuyến đường mà còn mang ý nghĩa văn hóa, lịch sử quan trọng, góp phần nâng cao trải nghiệm cho du khách. Thiết kế cột mốc Km0 đã được lựa chọn qua cuộc thi thiết kế và sẽ bao gồm nhiều chi tiết tượng trưng cho 63 tỉnh thành trên cả nước.",
+    "link": "https://tuoitre.vn/km0-ha-noi-du-kien-se-dat-canh-ho-guom-co-y-nghia-gi-2025032212101942.htm",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Cột mốc Km0 Hà Nội được đặt cạnh hồ Gươm có ý nghĩa gì?",
+    "answers": [
+      {
+        "text": "Nó đánh dấu điểm khởi đầu cho các tuyến đường từ Hà Nội.",
+        "correct": true
+      },
+      {
+        "text": "Để trang trí cho khu vực quanh hồ Gươm.",
+        "correct": false
+      },
+      {
+        "text": "Để tạo điểm check-in cho du khách.",
+        "correct": false
+      },
+      {
+        "text": "Nó không có ý nghĩa gì đặc biệt.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chung cư ở Hà Nội đã bàn giao 4-5 năm cũng tăng giá như 'lên đồng'",
     "content": "Thị trường chung cư ở Hà Nội đã ghi nhận sự tăng giá mạnh mẽ ngay cả đối với các dự án đã bàn giao từ 4-5 năm. Một số căn hộ đã tăng giá từ khoảng 45 triệu đồng/m2 lên đến 200 triệu đồng/m2, gây lo ngại về tính hợp lý của mức giá này. Các chuyên gia cho rằng tình trạng khan hiếm nguồn cung và đầu cơ đang tạo ra một hiện tượng \"thổi giá\" không thực tế, với nhiều giao dịch thực tế rất ít ỏi.",
     "link": "https://tuoitre.vn/chung-cu-o-ha-noi-da-ban-giao-4-5-nam-cung-tang-gia-nhu-len-dong-20250322090417834.htm",
@@ -1963,60 +1990,6 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
-    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
-    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
-    "answers": [
-      {
-        "text": "Do khô hạn khiến lúa chết",
-        "correct": true
-      },
-      {
-        "text": "Vì lúa bị sâu bệnh",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết quá lạnh",
-        "correct": false
-      },
-      {
-        "text": "Vì không có giống lúa tốt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đo mật độ xương bằng AI trong 30s",
     "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
     "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
@@ -2097,6 +2070,60 @@
       },
       {
         "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
+    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
+    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "answers": [
+      {
+        "text": "Do khô hạn khiến lúa chết",
+        "correct": true
+      },
+      {
+        "text": "Vì lúa bị sâu bệnh",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết quá lạnh",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giống lúa tốt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
@@ -3146,28 +3173,28 @@
     ]
   },
   {
-    "title": "Djokovic không ký tên trong đơn kiện ATP",
-    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
-    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
     "cat": "the-thao",
     "positivity": 6,
     "importance": 7,
-    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
     "answers": [
       {
-        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
         "correct": true
       },
       {
-        "text": "Vì không đồng ý với nội dung kiện.",
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
         "correct": false
       },
       {
-        "text": "Để thể hiện sự ủng hộ đối với ATP.",
+        "text": "Vì Modric không hài lòng với trọng tài.",
         "correct": false
       },
       {
-        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
         "correct": false
       }
     ]
@@ -3227,28 +3254,28 @@
     ]
   },
   {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "title": "Djokovic không ký tên trong đơn kiện ATP",
+    "content": "Novak Djokovic, mặc dù là đồng sáng lập Hiệp hội các tay vợt chuyên nghiệp (PTPA), đã không ký tên vào đơn kiện ATP về vấn đề tham nhũng. Trong khi nhiều tay vợt khác như Nick Kyrgios và Vasek Pospisil đã tham gia ký tên, Djokovic cho biết ông không đồng ý với một số nội dung trong hồ sơ kiện. Hành động này có thể được coi là chiến lược nhằm bảo vệ quyền lợi thi đấu của Djokovic trong ATP Tour, nhưng cũng làm giảm sức nặng của đơn kiện. PTPA đã đâm đơn kiện ATP và các tổ chức khác ở nhiều quốc gia, yêu cầu cải cách hệ thống quần vợt hiện tại.",
+    "link": "https://vnexpress.net/djokovic-khong-ky-ten-trong-don-kien-atp-4864260.html",
     "cat": "the-thao",
     "positivity": 6,
     "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "question": "Tại sao Djokovic không ký tên vào đơn kiện ATP?",
     "answers": [
       {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "text": "Để bảo vệ quyền lợi thi đấu của mình.",
         "correct": true
       },
       {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "text": "Vì không đồng ý với nội dung kiện.",
         "correct": false
       },
       {
-        "text": "Vì Modric không hài lòng với trọng tài.",
+        "text": "Để thể hiện sự ủng hộ đối với ATP.",
         "correct": false
       },
       {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "text": "Vì không muốn gây tranh cãi trong quần vợt.",
         "correct": false
       }
     ]
@@ -4301,6 +4328,33 @@
     ]
   },
   {
+    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
+    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
+    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
+    "answers": [
+      {
+        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
+        "correct": true
+      },
+      {
+        "text": "Có, vaccine HPV làm teo buồng trứng.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thủ phạm gây đau rốn",
     "content": "Đau rốn có thể do nhiều nguyên nhân khác nhau, trong đó khó tiêu là nguyên nhân phổ biến nhất. Các nguyên nhân nghiêm trọng khác bao gồm viêm ruột thừa, viêm dạ dày, và bệnh Crohn. Đau rốn có thể kèm theo các triệu chứng như buồn nôn, tiêu chảy, và cảm giác nóng rát, tùy thuộc vào nguyên nhân cụ thể. Ngoài ra, táo bón và nhiễm trùng cũng là những yếu tố có thể gây ra cơn đau này.",
     "link": "https://vnexpress.net/thu-pham-gay-dau-ron-4864078.html",
@@ -4327,33 +4381,6 @@
       },
       {
         "text": "Bệnh Crohn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
-    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
-    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
-    "answers": [
-      {
-        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
-        "correct": true
-      },
-      {
-        "text": "Có, vaccine HPV làm teo buồng trứng.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
         "correct": false
       }
     ]
@@ -4667,33 +4694,6 @@
       },
       {
         "text": "Lăn kim chỉ dùng cho người trẻ tuổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tuyên án vụ giả mạo trong công tác tại Trung tâm đăng kiểm 84-02D ở Trà Vinh",
-    "content": "Tòa án nhân dân tỉnh Trà Vinh đã tuyên án đối với Trần Lập Nghĩa cùng 5 đồng phạm vì hành vi giả mạo trong công tác tại Trung tâm đăng kiểm 84-02D. Nghĩa đã chỉ đạo thực hiện đăng kiểm giả cho 4.449 xe, thu lợi bất chính hơn 2,8 tỉ đồng. Các bị cáo nhận án phạt từ 2 đến 17 năm tù, với Nghĩa bị phạt 13 năm tù. Vụ án này phản ánh tình trạng tiêu cực trong hoạt động đăng kiểm tại Việt Nam.",
-    "link": "https://tuoitre.vn/tuyen-an-vu-gia-mao-trong-cong-tac-tai-trung-tam-dang-kiem-84-02d-o-tra-vinh-20250321115829538.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Vụ án giả mạo tại Trung tâm đăng kiểm 84-02D đã diễn ra như thế nào?",
-    "answers": [
-      {
-        "text": "Trần Lập Nghĩa và đồng phạm giả mạo đăng kiểm cho 4.449 xe.",
-        "correct": true
-      },
-      {
-        "text": "Các bị cáo chỉ bị phạt nhẹ và không có thiệt hại nào.",
-        "correct": false
-      },
-      {
-        "text": "Vụ án không có sự tham gia của cơ quan điều tra.",
-        "correct": false
-      },
-      {
-        "text": "Trần Lập Nghĩa bị tuyên án vì không thực hiện công việc đúng quy định.",
         "correct": false
       }
     ]
