--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -556,6 +556,37 @@
     ]
   },
   {
+    "title": "Kim Soo Hyun được bảo vệ nghiêm ngặt trong lần đầu lộ diện",
+    "content": "Kim Soo Hyun sẽ tham gia Lễ hội hoa anh đào tại Đài Loan vào ngày 30/3 tới, với sự bảo vệ nghiêm ngặt từ khoảng 50 cảnh sát. Sự kiện diễn ra sau khi nam diễn viên bị ảnh hưởng nghiêm trọng từ bê bối tình cảm gần đây, khiến công ty quản lý phải đứng ra phát ngôn thay anh. Kim Soo Hyun đã mất nhiều hợp đồng quảng cáo và dự án phim do scandal này, và anh sẽ phải bồi thường nếu không xuất hiện tại sự kiện.",
+    "link": "https://dantri.com.vn/giai-tri/kim-soo-hyun-duoc-bao-ve-nghiem-ngat-trong-lan-dau-lo-dien-20250322113549010.htm",
+    "cat": "giai-tri",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Kim Soo Hyun sẽ tham gia sự kiện nào vào ngày 30/3 tới?",
+    "answers": [
+      {
+        "text": "Lễ hội hoa anh đào tại Đài Loan",
+        "correct": true
+      },
+      {
+        "text": "Liên hoan phim Cannes",
+        "correct": false
+      },
+      {
+        "text": "Buổi ra mắt bộ phim mới",
+        "correct": false
+      },
+      {
+        "text": "Lễ trao giải thưởng nghệ thuật",
+        "correct": false
+      },
+      {
+        "text": "Hội thảo về điện ảnh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hamilton lần đầu thắng chặng nước rút F1",
     "content": "Lewis Hamilton đã giành chiến thắng trong cuộc đua Sprint đầu tiên của mình tại F1 vào ngày 22/3/2025, hoàn thành 19 vòng đua chỉ sau 30 phút 39,965 giây. Anh vượt qua Oscar Piastri và Max Verstappen để đứng đầu bảng xếp hạng, sau một khởi đầu không thuận lợi ở chặng trước tại Australia. Hamilton đã thể hiện sự xuất sắc trong việc chăm sóc lốp và cảm thấy hài lòng với chiếc xe mới của mình tại Ferrari.",
     "link": "https://vnexpress.net/hamilton-lan-dau-thang-chang-nuoc-rut-f1-4864555.html",
@@ -2376,86 +2407,32 @@
     ]
   },
   {
-    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
-    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
-    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
-    "answers": [
-      {
-        "text": "Nấu ăn và khiêu vũ cùng người lạ",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người đã quen biết nhau",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức các buổi hội thảo chuyên đề",
-        "correct": false
-      },
-      {
-        "text": "Chỉ dành cho những người lớn tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
+    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
+    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
+    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
+    "cat": "giai-tri",
     "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "importance": 7,
+    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
     "answers": [
       {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
         "correct": true
       },
       {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "text": "Để thu hút sự chú ý của khán giả.",
         "correct": false
       },
       {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "text": "Để đổi mới phong cách cá nhân.",
         "correct": false
       },
       {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
-    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
-    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
-    "answers": [
-      {
-        "text": "Do khô hạn khiến lúa chết",
-        "correct": true
-      },
-      {
-        "text": "Vì lúa bị sâu bệnh",
+        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
         "correct": false
       },
       {
-        "text": "Do thời tiết quá lạnh",
-        "correct": false
-      },
-      {
-        "text": "Vì không có giống lúa tốt",
+        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
         "correct": false
       }
     ]
@@ -2515,32 +2492,86 @@
     ]
   },
   {
-    "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
-    "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
-    "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
+    "title": "Xuyên đêm nấu ăn, khiêu vũ cùng người lạ",
+    "content": "Bài viết giới thiệu về một không gian sinh hoạt chung mang tên The Airy Space ở Hà Nội, nơi mà những người trẻ có thể giao lưu, nấu ăn, khiêu vũ và chia sẻ với nhau. Mai Hoa, Triệu Vy và nhiều người khác đã tham gia các hoạt động này, tìm thấy cảm giác an toàn và thân thuộc mặc dù chưa quen biết nhau. Di Trần, người tổ chức, cho biết mục đích là tạo ra một nơi kết nối cho những ai cần giao lưu và giảm áp lực trong cuộc sống. Xu hướng này phản ánh nhu cầu giải tỏa cảm xúc và tìm kiếm sự đồng cảm trong xã hội hiện đại.",
+    "link": "https://vnexpress.net/xuyen-dem-nau-an-khieu-vu-cung-nguoi-la-4863287.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
     "importance": 7,
-    "question": "Tại sao Triệu Lệ Dĩnh quyết định trở nên xấu xí trong vai diễn mới?",
+    "question": "The Airy Space là nơi tổ chức hoạt động gì cho người trẻ?",
     "answers": [
       {
-        "text": "Để thử thách bản thân và khẳng định diễn xuất.",
+        "text": "Nấu ăn và khiêu vũ cùng người lạ",
         "correct": true
       },
       {
-        "text": "Để thu hút sự chú ý của khán giả.",
+        "text": "Chỉ tổ chức các buổi tiệc sinh nhật",
         "correct": false
       },
       {
-        "text": "Để đổi mới phong cách cá nhân.",
+        "text": "Chỉ dành cho những người đã quen biết nhau",
         "correct": false
       },
       {
-        "text": "Để hợp tác cùng với đạo diễn nổi tiếng.",
+        "text": "Tổ chức các buổi hội thảo chuyên đề",
         "correct": false
       },
       {
-        "text": "Để thể hiện sự tự tin hơn trong diễn xuất.",
+        "text": "Chỉ dành cho những người lớn tuổi",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
+    "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
+    "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao nông dân ở Gia Lai phải cắt lúa cho bò ăn?",
+    "answers": [
+      {
+        "text": "Do khô hạn khiến lúa chết",
+        "correct": true
+      },
+      {
+        "text": "Vì lúa bị sâu bệnh",
+        "correct": false
+      },
+      {
+        "text": "Do thời tiết quá lạnh",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giống lúa tốt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
         "correct": false
       }
     ]
@@ -3590,60 +3621,6 @@
     ]
   },
   {
-    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
-    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
-    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
-    "cat": "the-thao",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
-    "answers": [
-      {
-        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì Modric không thích cách chơi của Mbappe.",
-        "correct": false
-      },
-      {
-        "text": "Vì Modric không hài lòng với trọng tài.",
-        "correct": false
-      },
-      {
-        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
-    "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
-    "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
-    "cat": "thoi-su",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cầu Ba Son có vai trò gì trong việc kết nối TP.HCM?",
-    "answers": [
-      {
-        "text": "Nó kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm.",
-        "correct": true
-      },
-      {
-        "text": "Nó chỉ là một cây cầu bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Nó không có vai trò gì đặc biệt.",
-        "correct": false
-      },
-      {
-        "text": "Nó là cầu dành riêng cho người đi bộ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bạn trẻ thích thú nhận quà tại gian hàng Việt Nam xanh",
     "content": "Vào sáng ngày 21-3, gian hàng chương trình Việt Nam Xanh tại Lễ hội Thanh niên TP.HCM thu hút sự tham gia của nhiều bạn trẻ. Tại đây, các bạn trẻ có cơ hội chơi game và làm khảo sát để nhận những phần quà hấp dẫn như ly uống nước, nón kết và các sản phẩm chăm sóc cá nhân. Gian hàng không chỉ mang đến niềm vui mà còn giới thiệu mục tiêu bảo vệ môi trường và phát triển bền vững của chương trình.",
     "link": "https://tuoitre.vn/ban-tre-thich-thu-nhan-qua-tai-gian-hang-viet-nam-xanh-20250321172330742.htm",
@@ -3693,6 +3670,60 @@
       },
       {
         "text": "Vì không muốn gây tranh cãi trong quần vợt.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Modric chỉ mặt, mắng Mbappe ăn vạ",
+    "content": "Trong trận đấu giữa Croatia và Pháp tại Nations League vào ngày 20/3, Luka Modric đã chỉ mặt và mắng đồng đội Kylian Mbappe sau tình huống Mbappe ngã trong vòng cấm. Modric tức giận vì nghĩ rằng Mbappe đã ăn vạ, mặc dù chỉ có một va chạm nhẹ. Tuy nhiên, cả hai cầu thủ đã làm hòa sau đó và cùng nhau ôm nhau. Croatia đã giành chiến thắng 2-0 trong trận này.",
+    "link": "https://vnexpress.net/modric-chi-mat-mang-mbappe-an-va-4864315.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Modric lại chỉ mặt và mắng Mbappe trong trận đấu giữa Croatia và Pháp?",
+    "answers": [
+      {
+        "text": "Vì Modric cho rằng Mbappe đã ăn vạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì Modric không thích cách chơi của Mbappe.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric không hài lòng với trọng tài.",
+        "correct": false
+      },
+      {
+        "text": "Vì Modric muốn Mbappe cải thiện kỹ năng cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cầu Ba Son rực rỡ nối các đô thị hiện đại hai bờ sông Sài Gòn",
+    "content": "Cầu Ba Son, còn được gọi là cầu Thủ Thiêm 2, đã hoàn thành hệ thống chiếu sáng mỹ thuật vào đầu năm 2025, tạo nên một biểu tượng mới cho TP.HCM. Cầu không chỉ kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm mà còn là điểm nhấn trong không gian đô thị ven sông Sài Gòn, thu hút du khách và người dân. Hệ thống chiếu sáng hiện đại giúp cầu trở nên lung linh vào ban đêm và có khả năng thay đổi màu sắc theo các sự kiện đặc biệt, góp phần nâng cao trải nghiệm tham quan của người dân và du khách.",
+    "link": "https://tuoitre.vn/cau-ba-son-ruc-ro-noi-cac-do-thi-hien-dai-hai-bo-song-sai-gon-20250320164603305.htm",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Cầu Ba Son có vai trò gì trong việc kết nối TP.HCM?",
+    "answers": [
+      {
+        "text": "Nó kết nối giao thông giữa quận 1 và khu đô thị Thủ Thiêm.",
+        "correct": true
+      },
+      {
+        "text": "Nó chỉ là một cây cầu bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Nó không có vai trò gì đặc biệt.",
+        "correct": false
+      },
+      {
+        "text": "Nó là cầu dành riêng cho người đi bộ.",
         "correct": false
       }
     ]
@@ -5084,33 +5115,6 @@
       },
       {
         "text": "Kim Soo Hyun đã nhận được giải thưởng lớn trong năm qua",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lăn kim chữa hói đầu thế nào?",
-    "content": "Lăn kim là một phương pháp điều trị hói đầu hiệu quả, giúp kích thích mọc tóc bằng cách tạo ra các lỗ nhỏ trên da đầu để tăng cường hấp thụ thuốc điều trị. Quy trình lăn kim thường được thực hiện 2-3 tuần một lần và cần từ 4-12 tháng để thấy kết quả rõ rệt. Tuy nhiên, không phải ai cũng phù hợp để thực hiện phương pháp này, đặc biệt là những người có các vấn đề về da hoặc bệnh lý nghiêm trọng khác.",
-    "link": "https://vnexpress.net/lan-kim-chua-hoi-dau-the-nao-4864087.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Lăn kim có hiệu quả trong việc chữa hói đầu không?",
-    "answers": [
-      {
-        "text": "Có, lăn kim giúp kích thích mọc tóc.",
-        "correct": true
-      },
-      {
-        "text": "Không, lăn kim không có tác dụng gì.",
-        "correct": false
-      },
-      {
-        "text": "Lăn kim chỉ làm đẹp da đầu.",
-        "correct": false
-      },
-      {
-        "text": "Lăn kim chỉ dùng cho người trẻ tuổi.",
         "correct": false
       }
     ]
