Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bình Phước đề xuất chỉ định nhà đầu tư làm nhanh cao tốc nối vùng Tây Nguyên",
+    "content": "UBND tỉnh Bình Phước đã đề xuất với Thủ tướng Chính phủ và các bộ liên quan về việc chỉ định nhà đầu tư cho dự án cao tốc Bắc - Nam phía Tây đoạn Gia Nghĩa - Chơn Thành, nhằm rút ngắn thời gian lựa chọn nhà đầu tư và đảm bảo khởi công vào ngày 30-4. Dự án có tổng chiều dài hơn 128km, kết nối vùng Tây Nguyên với vùng Đông Nam Bộ, và đã được Quốc hội thông qua chủ trương đầu tư. Tổng mức đầu tư cho dự án này khoảng 25.540 tỉ đồng, với phần đầu tư theo phương thức PPP.",
+    "link": "https://tuoitre.vn/binh-phuoc-de-xuat-chi-dinh-nha-dau-tu-lam-nhanh-cao-toc-noi-vung-tay-nguyen-20250322112400525.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tỉnh nào đề xuất chỉ định nhà đầu tư cho cao tốc nối vùng Tây Nguyên?",
+    "answers": [
+      {
+        "text": "Bình Phước",
+        "correct": true
+      },
+      {
+        "text": "Đắk Nông",
+        "correct": false
+      },
+      {
+        "text": "Lâm Đồng",
+        "correct": false
+      },
+      {
+        "text": "TP.HCM",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người đàn ông thiệt mạng nghi té lầu khi trèo về phòng ở bệnh viện",
     "content": "Vào đêm 21 rạng sáng 22-3, một người đàn ông 42 tuổi được phát hiện thiệt mạng trên bãi cỏ trong khuôn viên Bệnh viện đa khoa tỉnh Tiền Giang. Nguyên nhân cái chết được xác định là mất máu cấp và vỡ tim. Điều tra ban đầu cho thấy ông đã cố gắng trèo qua cửa sổ từ phòng bệnh của mình để lấy đồ và có thể đã bị ngã trong quá trình này.",
     "link": "https://tuoitre.vn/nguoi-dan-ong-thiet-mang-nghi-te-lau-khi-treo-ve-phong-o-benh-vien-20250322110415609.htm",
@@ -206,33 +233,6 @@
     ]
   },
   {
-    "title": "Bị suy thận có thể chơi pickleball không?",
-    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
-    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
-    "answers": [
-      {
-        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
-        "correct": true
-      },
-      {
-        "text": "Có thể chơi mà không cần lo lắng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chơi bình thường như trước đây.",
-        "correct": false
-      },
-      {
-        "text": "Không nên chơi bất kỳ môn thể thao nào.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cặp đôi đồng tính muốn có con nên làm gì?",
     "content": "Cặp đôi đồng tính có thể có con thông qua các phương pháp hỗ trợ sinh sản hiện đại như thụ tinh nhân tạo (IUI) và thụ tinh trong ống nghiệm (IVF). Những cặp đồng tính nữ có thể xin tinh trùng từ ngân hàng và thực hiện IUI, trong khi cặp đồng tính nam có thể phải chờ đợi các quy định pháp luật cho phép mang thai hộ. Bài viết cũng nhấn mạnh tầm quan trọng của việc tư vấn tâm lý cho bệnh nhân trong quá trình điều trị IVF.",
     "link": "https://vnexpress.net/cap-doi-dong-tinh-muon-co-con-nen-lam-gi-4864488.html",
@@ -259,6 +259,33 @@
       },
       {
         "text": "Chờ đợi pháp luật cho phép mang thai hộ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bị suy thận có thể chơi pickleball không?",
+    "content": "Người bị suy thận mạn giai đoạn hai như bạn cần thận trọng khi tham gia các hoạt động thể thao như pickleball. Mặc dù môn này có nhiều lợi ích cho sức khỏe, nhưng cũng đi kèm với nguy cơ chấn thương cao. Trước khi tiếp tục chơi, bạn nên tham khảo ý kiến bác sĩ để đảm bảo an toàn cho sức khỏe của mình.",
+    "link": "https://vnexpress.net/bi-suy-than-co-the-choi-pickleball-khong-4864511.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Người bị suy thận có thể tiếp tục chơi pickleball không?",
+    "answers": [
+      {
+        "text": "Nên tham khảo ý kiến bác sĩ trước khi chơi.",
+        "correct": true
+      },
+      {
+        "text": "Có thể chơi mà không cần lo lắng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chơi bình thường như trước đây.",
+        "correct": false
+      },
+      {
+        "text": "Không nên chơi bất kỳ môn thể thao nào.",
         "correct": false
       }
     ]
@@ -2401,33 +2428,6 @@
     ]
   },
   {
-    "title": "Runner nữ ung thư vú, chạy ngực trần",
-    "content": "Louise Bernadette Butcher, một runner nữ đã phẫu thuật cắt bỏ cả hai bên vú do ung thư, đã tham gia chạy ngực trần tại Bath Half Marathon 2025 để nâng cao nhận thức về ung thư vú và gây quỹ từ thiện. Bà đã hoàn thành cự ly 21,0975 km trong thời gian 2 giờ 14 phút 44 giây. Butcher hy vọng rằng hành động của mình sẽ giúp nâng cao sự tự tin của mọi người về cơ thể và khuyến khích những người khác chiến đấu với căn bệnh ung thư.",
-    "link": "https://vnexpress.net/runner-nu-ung-thu-vu-chay-nguc-tran-4864338.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Louise Butcher đã làm gì để nâng cao nhận thức về ung thư vú?",
-    "answers": [
-      {
-        "text": "Chạy ngực trần tại các giải marathon",
-        "correct": true
-      },
-      {
-        "text": "Tham gia các sự kiện thể thao khác",
-        "correct": false
-      },
-      {
-        "text": "Viết sách về hành trình của mình",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức hội thảo về sức khỏe",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Malaysia bổ sung 3 cầu thủ nhập tịch",
     "content": "Malaysia đã bổ sung ba cầu thủ nhập tịch vào đội tuyển bóng đá quốc gia nhằm chuẩn bị cho vòng loại cuối Asian Cup 2027. Ba cầu thủ này bao gồm tiền vệ Hector Hevel, hậu vệ Gabriel Palmero và thủ môn Christian Abad Amat, tất cả đều có nguồn gốc từ Tây Ban Nha. HLV Peter Cklamovski cho biết sự bổ sung này sẽ nâng cao sức cạnh tranh trong đội hình và góp phần cải thiện phong độ chung của đội tuyển.",
     "link": "https://vnexpress.net/malaysia-bo-sung-3-cau-thu-nhap-tich-4864311.html",
@@ -2450,6 +2450,33 @@
       },
       {
         "text": "Thiago Silva, Sergio Ramos, Manuel Neuer",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Runner nữ ung thư vú, chạy ngực trần",
+    "content": "Louise Bernadette Butcher, một runner nữ đã phẫu thuật cắt bỏ cả hai bên vú do ung thư, đã tham gia chạy ngực trần tại Bath Half Marathon 2025 để nâng cao nhận thức về ung thư vú và gây quỹ từ thiện. Bà đã hoàn thành cự ly 21,0975 km trong thời gian 2 giờ 14 phút 44 giây. Butcher hy vọng rằng hành động của mình sẽ giúp nâng cao sự tự tin của mọi người về cơ thể và khuyến khích những người khác chiến đấu với căn bệnh ung thư.",
+    "link": "https://vnexpress.net/runner-nu-ung-thu-vu-chay-nguc-tran-4864338.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Louise Butcher đã làm gì để nâng cao nhận thức về ung thư vú?",
+    "answers": [
+      {
+        "text": "Chạy ngực trần tại các giải marathon",
+        "correct": true
+      },
+      {
+        "text": "Tham gia các sự kiện thể thao khác",
+        "correct": false
+      },
+      {
+        "text": "Viết sách về hành trình của mình",
+        "correct": false
+      },
+      {
+        "text": "Tổ chức hội thảo về sức khỏe",
         "correct": false
       }
     ]
@@ -3858,28 +3885,28 @@
     ]
   },
   {
-    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
-    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
-    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
-    "cat": "suc-khoe",
+    "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
+    "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
+    "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
+    "cat": "the-thao",
     "positivity": 8,
-    "importance": 9,
-    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
+    "importance": 7,
+    "question": "Có những bước nào giúp runner chuẩn bị tinh thần trước ngày chạy giải?",
     "answers": [
       {
-        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
+        "text": "Đặt mục tiêu rõ ràng và duy trì tư duy tích cực",
         "correct": true
       },
       {
-        "text": "Thịt đỏ và đồ chiên",
+        "text": "Chỉ tập trung vào tốc độ chạy",
         "correct": false
       },
       {
-        "text": "Đồ uống có ga",
+        "text": "Tránh gặp gỡ bạn bè",
         "correct": false
       },
       {
-        "text": "Thực phẩm chế biến sẵn",
+        "text": "Không cần lên kế hoạch tập luyện",
         "correct": false
       }
     ]
@@ -3912,28 +3939,28 @@
     ]
   },
   {
-    "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
-    "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
-    "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
-    "cat": "the-thao",
+    "title": "Phụ nữ tiền mãn kinh ăn gì cân bằng nội tiết?",
+    "content": "Phụ nữ trong giai đoạn tiền mãn kinh thường gặp nhiều triệu chứng khó chịu như mất ngủ, mệt mỏi và bốc hỏa. Để cân bằng nội tiết tố, chế độ dinh dưỡng đóng vai trò quan trọng. Các thực phẩm giàu phytoestrogen như hạt lanh và đậu nành, canxi và vitamin D từ rau lá xanh và sữa, chất xơ từ ngũ cốc và trái cây, cũng như chất béo lành mạnh từ cá béo và hạt chia có thể hỗ trợ giảm triệu chứng. Ngoài ra, bổ sung các tinh chất thiên nhiên cũng giúp cải thiện tình trạng sức khỏe của phụ nữ trong giai đoạn này.",
+    "link": "https://vnexpress.net/phu-nu-tien-man-kinh-an-gi-can-bang-noi-tiet-4864193.html",
+    "cat": "suc-khoe",
     "positivity": 8,
-    "importance": 7,
-    "question": "Có những bước nào giúp runner chuẩn bị tinh thần trước ngày chạy giải?",
+    "importance": 9,
+    "question": "Phụ nữ tiền mãn kinh nên ăn gì để cân bằng nội tiết tố?",
     "answers": [
       {
-        "text": "Đặt mục tiêu rõ ràng và duy trì tư duy tích cực",
+        "text": "Thực phẩm giàu phytoestrogen như hạt lanh và đậu nành",
         "correct": true
       },
       {
-        "text": "Chỉ tập trung vào tốc độ chạy",
+        "text": "Thịt đỏ và đồ chiên",
         "correct": false
       },
       {
-        "text": "Tránh gặp gỡ bạn bè",
+        "text": "Đồ uống có ga",
         "correct": false
       },
       {
-        "text": "Không cần lên kế hoạch tập luyện",
+        "text": "Thực phẩm chế biến sẵn",
         "correct": false
       }
     ]
@@ -4738,33 +4765,6 @@
       },
       {
         "text": "Chỉ có một vài chuyến bay bị hoãn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lễ hội bánh mì Việt Nam lần 3 chật cứng người",
-    "content": "Lễ hội bánh mì Việt Nam lần 3 diễn ra từ ngày 21-3-2025 tại công viên Lê Văn Tám, quận 1, thu hút đông đảo người dân và du khách tham gia. Sự kiện kéo dài trong 4 ngày với nhiều gian hàng đa dạng, bao gồm cả các sản phẩm bánh mì độc đáo và mô hình chợ Bến Thành làm từ bánh mì. Khách tham quan có cơ hội thưởng thức miễn phí các loại bánh mì và trải nghiệm quy trình làm bánh mì. Lễ hội không chỉ tôn vinh ẩm thực Việt Nam mà còn thu hút sự quan tâm của khách quốc tế.",
-    "link": "https://tuoitre.vn/le-hoi-banh-mi-viet-nam-lan-3-chat-cung-nguoi-20250321135432953.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Lễ hội bánh mì Việt Nam lần 3 diễn ra ở đâu và khi nào?",
-    "answers": [
-      {
-        "text": "Công viên Lê Văn Tám, từ 21-3-2025",
-        "correct": true
-      },
-      {
-        "text": "Công viên Tao Đàn, từ 20-3-2025",
-        "correct": false
-      },
-      {
-        "text": "Công viên 23 tháng 9, từ 22-3-2025",
-        "correct": false
-      },
-      {
-        "text": "Công viên Thống Nhất, từ 21-3-2024",
         "correct": false
       }
     ]
