Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Nhiều giáo viên dạy miễn phí, hỗ trợ ngoài giờ cho học sinh ôn thi cuối cấp",
+    "content": "Tại Nghệ An, nhiều giáo viên đã tình nguyện mở lớp ôn thi miễn phí cho học sinh chuẩn bị cho kỳ thi vào lớp 10 và tốt nghiệp THPT. Các lớp học diễn ra ngoài giờ học chính thức, giúp học sinh làm quen với cấu trúc đề thi mới. Sở Giáo dục và Đào tạo Nghệ An cũng đã hỗ trợ các trường trong việc xây dựng kế hoạch ôn tập chất lượng cho học sinh cuối cấp.",
+    "link": "https://dantri.com.vn/giao-duc/nhieu-giao-vien-day-mien-phi-ho-tro-ngoai-gio-cho-hoc-sinh-on-thi-cuoi-cap-20250322133758452.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tại Nghệ An, ai tổ chức các lớp ôn thi miễn phí cho học sinh cuối cấp?",
+    "answers": [
+      {
+        "text": "Nhiều giáo viên",
+        "correct": true
+      },
+      {
+        "text": "Các trung tâm ôn thi",
+        "correct": false
+      },
+      {
+        "text": "Phụ huynh học sinh",
+        "correct": false
+      },
+      {
+        "text": "Sở Giáo dục và Đào tạo",
+        "correct": false
+      },
+      {
+        "text": "Học sinh tự ôn tập",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bị bẹ dừa rơi trúng mắt rung rinh thủy tinh thể",
     "content": "Một người đàn ông 77 tuổi ở Bến Tre đã bị bẹ dừa rơi trúng mắt, dẫn đến tình trạng rung rinh thủy tinh thể và mất khả năng nhìn. Các bác sĩ tại Bệnh viện Mắt Sông Tiền đã tiến hành phẫu thuật khẩn cấp để bảo tồn thị lực cho bệnh nhân. Sau phẫu thuật, thị lực của bệnh nhân đã dần phục hồi. Bác sĩ khuyến cáo rằng việc khám mắt định kỳ và can thiệp sớm là rất quan trọng để ngăn ngừa các tổn thương nghiêm trọng hơn.",
     "link": "https://vnexpress.net/bi-be-dua-roi-trung-mat-rung-rinh-thuy-tinh-the-4863265.html",
@@ -2720,87 +2751,6 @@
     ]
   },
   {
-    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
-    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
-    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
-    "answers": [
-      {
-        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
-        "correct": true
-      },
-      {
-        "text": "Không, họ sẽ không được hưởng lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ chỉ được hưởng một phần lương hưu.",
-        "correct": false
-      },
-      {
-        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đo mật độ xương bằng AI trong 30s",
-    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
-    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
-    "answers": [
-      {
-        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
-        "correct": true
-      },
-      {
-        "text": "Giúp bác sĩ làm việc ít hơn.",
-        "correct": false
-      },
-      {
-        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
-        "correct": false
-      },
-      {
-        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
-    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
-    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
-    "answers": [
-      {
-        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
-        "correct": true
-      },
-      {
-        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
-        "correct": false
-      },
-      {
-        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
-        "correct": false
-      },
-      {
-        "text": "Vì chỉ những người tài năng mới thành công.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Triệu Lệ Dĩnh chấp nhận trở nên xấu xí để \"bước qua vùng an toàn\"",
     "content": "Triệu Lệ Dĩnh đã chấp nhận thay đổi hình ảnh của mình bằng cách nhận vai diễn khó khăn trong bộ phim \"Hoa hướng dương\", nơi cô vào vai một nữ tù nhân tìm lại cuộc sống sau khi mãn hạn tù. Với tạo hình giản dị và gần gũi, cô quyết tâm phá bỏ hình ảnh hoàn hảo để thử thách bản thân trong diễn xuất. Nữ diễn viên đang nỗ lực khẳng định vị thế của mình trong làng giải trí và nhận được sự khen ngợi từ đạo diễn và khán giả. Phim dự kiến ra mắt vào ngày 4/4 tới.",
     "link": "https://dantri.com.vn/giai-tri/trieu-le-dinh-chap-nhan-tro-nen-xau-xi-de-buoc-qua-vung-an-toan-20250321111238551.htm",
@@ -2863,6 +2813,33 @@
     ]
   },
   {
+    "title": "Đóng bảo hiểm 30 năm, nghỉ hưu trước tuổi được hưởng chế độ ra sao?",
+    "content": "Bài viết giải đáp thắc mắc của một viên chức đã đóng bảo hiểm 30 năm và muốn nghỉ hưu trước tuổi theo nghị định 178/2024/NĐ-CP. Theo luật sư Nguyễn Hồng Linh, người này đủ điều kiện để nghỉ hưu trước tuổi và sẽ được hưởng đầy đủ lương hưu mà không bị trừ tỉ lệ do nghỉ hưu sớm. Ngoài ra, họ còn được hưởng các khoản trợ cấp khác theo quy định của pháp luật về bảo hiểm xã hội.",
+    "link": "https://tuoitre.vn/dong-bao-hiem-30-nam-nghi-huu-truoc-tuoi-duoc-huong-che-do-ra-sao-20250313135630462.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người đóng bảo hiểm 30 năm nghỉ hưu trước tuổi có được hưởng chế độ gì không?",
+    "answers": [
+      {
+        "text": "Có, họ sẽ được hưởng đầy đủ lương hưu và các khoản trợ cấp khác.",
+        "correct": true
+      },
+      {
+        "text": "Không, họ sẽ không được hưởng lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ chỉ được hưởng một phần lương hưu.",
+        "correct": false
+      },
+      {
+        "text": "Họ phải chờ đến tuổi nghỉ hưu mới được hưởng lương hưu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Lúa chết vì khô hạn, nông dân phải cắt cho bò ăn",
     "content": "Khô hạn kéo dài tại Gia Lai đã khiến gần 50 ha lúa của người dân bị thiệt hại nặng nề, buộc họ phải cắt lúa để làm thức ăn cho bò. Ông Tônh và nhiều nông dân khác đang phải tìm cách cứu mùa màng bằng việc bơm nước từ giếng, nhưng nước ngày càng cạn kiệt. Tình trạng này không chỉ xảy ra ở Gia Lai mà còn lan rộng sang các tỉnh khác như Kon Tum, nơi khoảng 380 ha lúa và cây trồng khác cũng bị ảnh hưởng nghiêm trọng do thiếu nước tưới.",
     "link": "https://vnexpress.net/lua-chet-vi-kho-han-nong-dan-phai-cat-cho-bo-an-4858759.html",
@@ -2885,6 +2862,60 @@
       },
       {
         "text": "Vì không có giống lúa tốt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đo mật độ xương bằng AI trong 30s",
+    "content": "Bệnh viện Đại học Y Hà Nội đã ứng dụng công nghệ trí tuệ nhân tạo (AI) để đo mật độ xương chỉ trong 30 giây, giảm thời gian chờ đợi so với 15 phút trước đây. Phương pháp mới này không chỉ tiết kiệm thời gian mà còn nâng cao độ chính xác trong việc phát hiện bệnh loãng xương, một vấn đề ngày càng nghiêm trọng tại Việt Nam. AI trở thành công cụ hỗ trợ quan trọng cho các bác sĩ trong việc chẩn đoán và điều trị, đồng thời giúp giảm chi phí cho người bệnh.",
+    "link": "https://vnexpress.net/do-mat-do-xuong-bang-ai-trong-30s-4863001.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ứng dụng AI vào đo mật độ xương có lợi ích gì?",
+    "answers": [
+      {
+        "text": "Giúp giảm thời gian đo xuống 30 giây và tăng độ chính xác.",
+        "correct": true
+      },
+      {
+        "text": "Giúp bác sĩ làm việc ít hơn.",
+        "correct": false
+      },
+      {
+        "text": "Giúp bệnh nhân không phải đến bệnh viện.",
+        "correct": false
+      },
+      {
+        "text": "Giúp tiết kiệm chi phí cho việc phẫu thuật.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Sẽ là nói dối, nếu ta nói với trẻ rằng thành công chỉ đến từ sự nỗ lực\"",
+    "content": "Nam diễn viên Anthony Mackie vừa chia sẻ rằng sẽ là sai lầm nếu dạy trẻ em rằng thành công chỉ đến từ sự nỗ lực. Ông nhấn mạnh rằng yếu tố may mắn cũng đóng vai trò quan trọng trong việc đạt được thành công, và nhiều người nổi tiếng đã thừa nhận điều này. Mackie, người đã phải làm việc hơn 10.000 giờ trước khi có cơ hội lớn trong sự nghiệp, cho rằng sự may mắn không thể bị bỏ qua trong bất kỳ hành trình nào hướng tới thành công.",
+    "link": "https://dantri.com.vn/giao-duc/se-la-noi-doi-neu-ta-noi-voi-tre-rang-thanh-cong-chi-den-tu-su-no-luc-20250320211508860.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao Anthony Mackie cho rằng may mắn cũng quan trọng trong thành công?",
+    "answers": [
+      {
+        "text": "Vì thành công không chỉ đến từ nỗ lực mà còn do may mắn.",
+        "correct": true
+      },
+      {
+        "text": "Vì nỗ lực là yếu tố duy nhất quyết định thành công.",
+        "correct": false
+      },
+      {
+        "text": "Vì mọi người đều có thể thành công mà không cần nỗ lực.",
+        "correct": false
+      },
+      {
+        "text": "Vì chỉ những người tài năng mới thành công.",
         "correct": false
       }
     ]
@@ -4848,64 +4879,6 @@
       },
       {
         "text": "Quảng Ninh, Thái Bình, Nam Định",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ngoại hình ưa nhìn dễ kiếm tiền, thăng tiến",
-    "content": "Một nghiên cứu mới tại Anh chỉ ra rằng người có ngoại hình ưa nhìn thường có lợi thế trong công việc, dễ thăng tiến và kiếm được nhiều tiền hơn so với đồng nghiệp kém hấp dẫn. Theo khảo sát của Standout-CV, nhân sự sở hữu ngoại hình dễ nhìn có thể kiếm thêm tới 20.000 USD mỗi năm. Nghiên cứu cho thấy khoảng 83% nhân viên chăm chút cho ngoại hình tại nơi làm việc dễ tạo thiện cảm hơn, đồng thời cũng đặt ra câu hỏi về nguồn gốc của sự tự tin liên quan đến ngoại hình.",
-    "link": "https://vnexpress.net/ngoai-hinh-ua-nhin-de-kiem-tien-thang-tien-4864167.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Ngoại hình ưa nhìn có ảnh hưởng đến thu nhập và thăng tiến trong công việc không?",
-    "answers": [
-      {
-        "text": "Có, ngoại hình ưa nhìn giúp kiếm nhiều tiền hơn.",
-        "correct": true
-      },
-      {
-        "text": "Không, ngoại hình không ảnh hưởng đến sự nghiệp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng đến một số ngành nghề.",
-        "correct": false
-      },
-      {
-        "text": "Ngoại hình không quan trọng trong công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đà Nẵng cho Phương Trang xây khu đô thị lớn cuối sông Hàn",
-    "content": "Dự án khu đô thị Thuận Phước tại Đà Nẵng, do Tập đoàn Phương Trang làm chủ đầu tư, đã được thành phố phê duyệt với tổng mức đầu tư 11.400 tỉ đồng. Khu đô thị này có diện tích 976.000m2, bao gồm các khu chức năng như nhà ở thấp tầng, cao tầng, căn hộ, biệt thự ven sông và trung tâm thương mại. Dự án được kỳ vọng sẽ thúc đẩy phát triển phía bắc bán đảo Sơn Trà và tạo ra một biểu tượng mới cho Đà Nẵng.",
-    "link": "https://tuoitre.vn/da-nang-cho-phuong-trang-xay-khu-do-thi-lon-cuoi-song-han-20250321150406038.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Khu đô thị nào vừa được phê duyệt xây dựng tại Đà Nẵng?",
-    "answers": [
-      {
-        "text": "Khu đô thị Thuận Phước",
-        "correct": true
-      },
-      {
-        "text": "Khu đô thị Golden Hills",
-        "correct": false
-      },
-      {
-        "text": "Khu đô thị Nam Hòa Xuân",
-        "correct": false
-      },
-      {
-        "text": "Khu đô thị An Phú",
-        "correct": false
-      },
-      {
-        "text": "Khu đô thị Phú Mỹ Hưng",
         "correct": false
       }
     ]
