Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,37 @@
     ]
   },
   {
+    "title": "Hội đàm Nhật - Trung - Hàn trước \"bước ngoặt lịch sử\"",
+    "content": "Cuộc hội đàm 3 bên giữa Nhật Bản, Trung Quốc và Hàn Quốc diễn ra tại Tokyo vào ngày 22/3, nhằm thảo luận về các vấn đề an ninh và thương mại khu vực. Đây là cuộc gặp đầu tiên kể từ năm 2023, diễn ra trong bối cảnh bất ổn địa chính trị gia tăng và những tác động từ chính sách của Mỹ. Các ngoại trưởng đã nhấn mạnh tầm quan trọng của đối thoại và hợp tác để đối phó với những thách thức hiện tại, đặc biệt là vấn đề hạt nhân Triều Tiên.",
+    "link": "https://dantri.com.vn/the-gioi/hoi-dam-nhat-trung-han-truoc-buoc-ngoat-lich-su-20250322144422079.htm",
+    "cat": "the-gioi",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Cuộc hội đàm 3 bên Nhật - Trung - Hàn diễn ra vào ngày nào?",
+    "answers": [
+      {
+        "text": "22/3",
+        "correct": true
+      },
+      {
+        "text": "21/3",
+        "correct": false
+      },
+      {
+        "text": "23/3",
+        "correct": false
+      },
+      {
+        "text": "20/3",
+        "correct": false
+      },
+      {
+        "text": "19/3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bị bẹ dừa rơi trúng mắt rung rinh thủy tinh thể",
     "content": "Một người đàn ông 77 tuổi ở Bến Tre đã bị bẹ dừa rơi trúng mắt, dẫn đến tình trạng rung rinh thủy tinh thể và mất khả năng nhìn. Các bác sĩ tại Bệnh viện Mắt Sông Tiền đã tiến hành phẫu thuật khẩn cấp để bảo tồn thị lực cho bệnh nhân. Sau phẫu thuật, thị lực của bệnh nhân đã dần phục hồi. Bác sĩ khuyến cáo rằng việc khám mắt định kỳ và can thiệp sớm là rất quan trọng để ngăn ngừa các tổn thương nghiêm trọng hơn.",
     "link": "https://vnexpress.net/bi-be-dua-roi-trung-mat-rung-rinh-thuy-tinh-the-4863265.html",
